ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-reservation-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /search-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 80
          - path: /reservation-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 80
          - path: /notification-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
